# ariel-data-challenge

./: README.md  ariel.py  ariel_data_challenge.py  build_requirements.txt  configuration.py  preprocess_data.py  pyproject.toml  requirements.txt
.github/workflows/: publish_pypi.yml  pypi_publish.yml  pypi_release.yml  python_ci.yml  release.yml  test_pypi_publish.yml  test_pypi_release.yml  unittest.yml
ariel_data_preprocessing/: README.md  calibration_data.py  data_preprocessing.py  signal_correction.py  signal_correction_functions.py  signal_extraction.py  signal_extraction_functions.py  utils.py
data_preprocessing/: signal_correction.py
docs/: _config.yml  about.md  index.md
functions/: data_acquisition.py
model_training/: optimize_cnn.py  optimize_gpu_workers.py
notebooks/: 01.1-EDA_dataset_structure.ipynb  01.2-EDA_ground_truth_spectra.ipynb  01.3-AIRS_signal.ipynb  01.4-FGS1_signal.ipynb  01.5-axis_info-CDS.ipynb  01.5-axis_info.ipynb  02.1-signal_correction.ipynb  02.2-signal_correction_optimization.ipynb  02.3-AIRS_signal_extraction.ipynb  02.3-signal_extraction.ipynb  02.4-FGS_signal_extraction.ipynb  02.4-wavelength_smoothing.ipynb  02.5-wavelength_smoothing.ipynb  02.6-frame_sampling.ipynb  02.6-preprocessed_data_check.ipynb  02.7-frame_sampling.ipynb  03-CNN_model.ipynb  03.1-CNN_model.ipynb  03.1-multiGPU_training_optimization.ipynb  03.1-preprocessed_data_check.ipynb  03.2-CNN_model.ipynb  03.2-multiGPU_training_optimization.ipynb
tests/: test_preprocessing.py  test_signal_correction.py  test_signal_extraction.py
(+29 files in other folders)
